[project]
name = "panda-cli"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "meleshuk0804@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/panda_cli"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
    "twine>=6.2.0",
]
